[package]
name = "qlog"
version = "0.1.0"
authors = ["David Lutterkort <lutter@watzmann.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
lazy_static = "1.4.0"
rand = { version = "0.7.3", features = ["small_rng"] }
regex = "1.3.9"
serde = { version = "1.0.101",  features = ["derive"] }
serde_json = "1.0.42"
walkdir = "2.2.9"
